syntax = "proto3";

import "Guid.proto";

message ApiDisconnectCommand {
  Guid RequestId = 1;
  string SecurityToken = 2;
}
